@@ -1,12 +1,14 @@
 package com.heal.doctor.security;
 
 import com.heal.doctor.models.DoctorEntity;
+import com.heal.doctor.models.enums.RolesEnum;
 import lombok.Getter;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 @Getter
 public class DoctorUserDetails implements UserDetails {
@@ -19,7 +21,14 @@ public class DoctorUserDetails implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList();
+        RolesEnum role = doctor.getRolesEnum();
+        // Default to DOCTOR role if role is null (for backward compatibility with existing records)
+        if (role == null) {
+            role = RolesEnum.DOCTOR;
+        }
+        // Convert RolesEnum to Spring Security authority format (ROLE_DOCTOR, ROLE_ADMIN, etc.)
+        String authority = "ROLE_" + role.name();
+        return List.of(new SimpleGrantedAuthority(authority));
     }
 
     @Override
